Finished discovery and deps