@@ -20,8 +20,8 @@ import java.io.File;
 import java.net.*;
 import java.nio.file.*;
 import java.util.*;
+import java.util.stream.Stream;
 
-import groovy.lang.*;
 import io.github.troblecodings.mctools.Settings.StringSetting;
 import io.github.troblecodings.mctools.scenes.OverViewScene;
 import javafx.application.Platform;
@@ -34,16 +34,14 @@ public class JarTools extends Thread {
 
 	private static JarTools INSTANCE = new JarTools();
 	private static Callback callback;
-	private static HashMap<String, String> PROPS = new HashMap<String, String>(); // BUILD.PROPERTIES
-	private static ArrayList<String> REPOS = new ArrayList<String>(); // READ MAVEN REPOSITORIES
-	private static ArrayList<String> DEPS = new ArrayList<String>(); // READ MAVEN DEPENDENCIES
 	
 	private URI uri;
 	private FileSystem fs;
 	private String toml;
-	private String manifest;
+	//private String manifest;
 	private String modid;
 	private String name;
+	private final ArrayList<Class<?>> LOADED_CLASSES = new ArrayList<Class<?>>();
 
 	private JarTools() {}
 	
@@ -51,19 +49,7 @@ public class JarTools extends Thread {
 		callback = cb;
 		INSTANCE.start();
 	}
-	
-	private static void loadProperties(String str) {
-		if(str.contains("=") && !str.trim().startsWith("#")) {
-			String[] woCom = str.split("#")[0].split("=");
-			PROPS.put(woCom[0].trim(), woCom[1].trim());
-			OverViewScene.log(woCom[0].trim(), woCom[1].trim());
-		}
-	}
-	
-	private static void loadBuild(String line) {
 		
-	}
-	
 	@Override
 	public void run() {
 		try {
@@ -96,14 +82,7 @@ public class JarTools extends Thread {
 			}
 			OverViewScene.log("Success! Gathering information!");
 // COMPILE END
-// START DISCOVERY
-			// MAVEN AND DEPS
-			Path buildprops = Paths.get(workspace, "build.properties");
-			Files.readAllLines(buildprops).forEach(JarTools::loadProperties);
-			
-			Path build = Paths.get(workspace, "build.gradle");
-			Files.readAllLines(build).forEach(JarTools::loadBuild);
-			
+// START DISCOVERY			
 			// INIT FILESYSTEM
 			Path buildlibs = Paths.get(workspace, "build/libs");
 
@@ -117,12 +96,26 @@ public class JarTools extends Thread {
 			}
 			// DISCOVER META
 			this.toml = new String(Files.readAllBytes(this.fs.getPath("META-INF/mods.toml")));
-			this.manifest = new String(Files.readAllBytes(this.fs.getPath("META-INF/MANIFEST.MF")));
+			//this.manifest = new String(Files.readAllBytes(this.fs.getPath("META-INF/MANIFEST.MF")));
 
 			this.modid = find(this.toml, "modId");
 			this.name = find(this.toml, "displayName");
 // LOAD CLASSES
-			URLClassLoader loader = URLClassLoader.newInstance(new URL[] { new URL(this.uri.toString() + "!/") },
+			
+			ArrayList<URL> urls = new ArrayList<URL>();
+			urls.add(new URL(this.uri.toString() + "!/"));
+			try(Stream<Path> stream = Files.find(Paths.get("C:\\Users\\" + System.getenv("USERNAME") +"\\.gradle\\caches\\"), 50, (pth, atr) -> {
+				return pth.toString().endsWith(".jar");
+			})){
+				stream.forEach(pth -> {
+					try {
+						urls.add(pth.toUri().toURL());
+					} catch (MalformedURLException e1) {
+						ExceptionDialog.stacktrace(e1);
+					}
+				});
+			}
+			URLClassLoader loader = URLClassLoader.newInstance(urls.toArray(new URL[urls.size()]),
 					this.getClass().getClassLoader());
 			Path path = this.fs.getRootDirectories().iterator().next();
 			Files.find(path, 20, (pth, attr) -> {
@@ -131,8 +124,8 @@ public class JarTools extends Thread {
 				String str = pth.toString().replaceFirst("/", "").replace("/", ".").replace(".class", "");
 				OverViewScene.log(str);
 				try {
-					Class cls = loader.loadClass(str);
-					OverViewScene.log(cls.toString());
+					Class<?> cls = loader.loadClass(str);
+					LOADED_CLASSES.add(cls);
 				} catch (Throwable e) {
 					ExceptionDialog.stacktrace(e, "Couldn't load class " + str + "\n\rMissing library?");
 				}
